finish the about.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="javascript:void(0)" class="closebtn" onclick="toggleMobileNavigation()">&times;</a>
             </div>
             <a href="#about" onclick="toggleMobileNavigation()">About Us</a>
-            <a href="#services" onclick="toggleMobileNavigation()">Cub</a>
+            <a href="#services" onclick="toggleMobileNavigation()">Cubs</a>
             <a href="#careers" onclick="toggleMobileNavigation()">Events</a>
             <a href="#contact" onclick="toggleMobileNavigation()">Contact</a>
           </div>
@@ -51,19 +51,19 @@
       <div class="about container w3-padding-large" id="about">
         <div class="text-one">
           <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <a class="w3-button w3-round-large w3-indigo w3-hover-blue" href="about.html">Read more</a> 
+          <p>We’re all about encouraging boys and girls to make friends, be helpful to others, and do their very best no matter the outcome.
+            With the help of powerful learning projects and exciting outdoor activities,
+            we aim to teach children that doing their best can be a fun and rewarding experience—no matter the difficulty of the challenge.
+            To learn more about the aims and benefits of Cub Scouting, follow the links below!</p>
+          <a class="w3-button w3-round-large w3-yellow w3-hover-blue w3-large" href="about.html">Read more</a> 
         </div>
         <div class="text-one">
-          <h2>Our Vision</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <a class="w3-button w3-round-large w3-indigo w3-hover-blue" href="vision.html">Read more</a> 
+          <h2>Our Pack 140</h2>
+          <p>Pack 140 is a very organized and well run Pack that loves to have lots of fun.
+            Our Pack programs numerous events to give our families every opportunity to balance participation in Scouts with other interests such as sports, clubs, or other pursuits that lead to busy schedules.
+            Our size affords us the ability to ensure that there are always a good number of Scouts that attend these events so everyone can enjoy the activities we provide.
+            </p>
+          <a class="w3-button w3-round-large w3-yellow w3-hover-blue w3-large" href="vision.html">Read more</a> 
         </div>
       </div>
 
