finish the cub section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           </div>
           <div class="links">
             <a href="#about" >About</a>
-            <a href="#services" >Cubs</a>
-            <a href="#careers" >Events</a>
+            <a href="#about" >Pack 140</a>
+            <a href="#cubs" >Cubs</a>
+            <a href="#gallery" >Gallery</a>
             <a href="#contact" >Contact</a>            
           </div>
           <div id="mobile-sidenav" class="mobile-links w3-highway-blue">
@@ -37,15 +38,16 @@
               <a href="javascript:void(0)" class="closebtn" onclick="toggleMobileNavigation()">&times;</a>
             </div>
             <a href="#about" onclick="toggleMobileNavigation()">About Us</a>
-            <a href="#services" onclick="toggleMobileNavigation()">Cubs</a>
-            <a href="#careers" onclick="toggleMobileNavigation()">Events</a>
+            <a href="#about" onclick="toggleMobileNavigation()">Pack 140</a>
+            <a href="#cubs" onclick="toggleMobileNavigation()">Cubs</a>
+            <a href="#gallery" onclick="toggleMobileNavigation()">Gallery</a>
             <a href="#contact" onclick="toggleMobileNavigation()">Contact</a>
           </div>
         </nav>
       </div>
 
-      <div >
-        <img src="./assets/images/banner-02.jpg" class="w3-image" alt="...">
+      <div>
+        <img src="./assets/images/banner-02.jpg" class="w3-image" alt="Welcome Adventure pack14">
       </div>
 
       <div class="about container w3-padding-large" id="about">
@@ -63,183 +65,75 @@
             Our Pack programs numerous events to give our families every opportunity to balance participation in Scouts with other interests such as sports, clubs, or other pursuits that lead to busy schedules.
             Our size affords us the ability to ensure that there are always a good number of Scouts that attend these events so everyone can enjoy the activities we provide.
             </p>
-          <a class="w3-button w3-round-large w3-yellow w3-hover-blue w3-large" href="vision.html">Read more</a> 
+          <a class="w3-button w3-round-large w3-yellow w3-hover-blue w3-large" href="pack.html">Read more</a> 
         </div>
       </div>
 
-      <div class="w3-panel w3-highway-blue numbers">
-        <h2 class="w3-center w3-xxxlarge">WE HAVE</h2>
-        <p class="w3-center w3-xxxlarge show-medium">
-          <?xml version="1.0" encoding="utf-8"?>
-          <svg x="0px" y="0px" width="36" fill="#bed9f3" stroke="#bed9f3"
-            viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-          <g id="Down-arrow">
-            <path d="M17.2929993,29.7070007c-0.3906994-0.3906002-0.3906994-1.0234013,0-1.4140015
-              c0.3906002-0.3906002,1.0234013-0.3906002,1.4140015,0L32,41.5858994l13.2929993-13.2929001
-              c0.3905983-0.3906002,1.0233994-0.3906002,1.4140015,0C46.902298,28.4883003,47,28.7441998,47,29
-              c0,0.2558994-0.097702,0.5116997-0.2929993,0.7070007l-14,14c-0.3906021,0.3906975-1.0234013,0.3906975-1.4140015,0
-              L17.2929993,29.7070007z"/>
-            <path d="M32,64c17.6730957,0,32-14.3269005,32-32S49.6730957,0,32,0C14.3268003,0,0,14.3268995,0,32S14.3268003,64,32,64z M32,62
-              C15.4579,62,2,48.542099,2,32C2,15.4580002,15.4579,2,32,2s30,13.4580002,30,30C62,48.542099,48.542099,62,32,62z"/>
-          </svg>
-        </p>
-        <div class="container w3-padding-large">
-          <div class="text">
-            <p class="number">479</p>
-            <p>Clients</p>
-          </div>
-          <div class="text">
-            <p class="number">15</p>
-            <p>Employees</p>
-          </div>
-          <div class="text">
-            <p class="number">20</p>
-            <p>Years of experience</p>
-          </div>
-          <div class="text">
-            <p class="number">35</p>
-            <p>Awards</p>
-          </div>
-        </div>
+      <div>
+        <img src="./assets/images/cubslogo-06.jpg" class="w3-image" alt="Welcome Adventure pack14">
       </div>
 
-      <div class="services container" id="services">
-        <h2 class="w3-center">Our services</h2>
+      <div class="services container" id="cubs">
+        <h2 class="w3-center">Our CUBS</h2>
         <div class="cards w3-padding-large w3-margin-top">
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>WEB DEVELOPMENT</h3>
+            <h3>Kindergarten - Lion</h3>
             <div class="card-text">
-              <p>We will build your website and fulfill all your needs. SEO optimization is included.</p>
+              <img src="./assets/images/lion.png" class="w3-image" style="width: 100px; height: 100px;" alt="Lion Cub">
+              <p>Kindergartners work toward the Lion rank. The Lion rank is earned by completing five adventures.
+                Although participation with an adult partner is required for all Lion awards, recognition items are for the Scouts only. </p>
             </div>
           </div>
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>MOBILE DEVELOPMENT</h3>
+            <h3>First Grade - Tiger</h3>
             <div class="card-text">
-              <p>We will build your mobile application and fulfill all your needs. SEO optimization is included.</p>
+              <img src="./assets/images/tiger.png" class="w3-image" style="width: 100px; height: 100px;" alt="Tiger Cub">
+              <p>First graders work toward the Tiger rank. The Tiger rank is earned by completing four requirements.
+                Although participation with an adult partner is required for all Tiger awards, recognition items are for the Scouts only. </p>
             </div>
           </div>
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>SEO AND PERFORMANCE OPTIMIZATION</h3>
+            <h3>Second Grade - Wolf</h3>
             <div class="card-text">
-              <p>We will optimize your existing website or mobile application in SEO and performance.</p>
+              <img src="./assets/images/wolf.png" class="w3-image" style="width: 100px; height: 100px;" alt="Wolf Cub">
+              <p>Second graders work toward the Wolf rank. The Wolf rank is earned by completing the four requirements. </p>
             </div>
           </div>
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>CONSULTING</h3>
+            <h3>Third Grade - Bear</h3>
             <div class="card-text">
-              <p>We offer <span class="">free</span> consultation about your idea and offer you best approach on how to realize it.</p>
+              <img src="./assets/images/bear.png" class="w3-image" style="width: 100px; height: 100px;" alt="Bear Cub">
+              <p>Third graders work toward the Bear rank. The Bear rank is earned by completing the four requirements. </p>
             </div>
           </div>
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>DIGITAL MARKETING</h3>
+            <h3>Fourth Grade - Webelos</h3>
             <div class="card-text">
-              <p>We will ensure that your idea is well known in attempt to gather user base and expand your idea.</p>
+              <img src="./assets/images/webelos.png" class="w3-image" style="width: 100px; height: 100px;" alt="Webelos Cub">
+              <p>Fourth graders work toward the Webelos rank. The Webelos rank is earned by completing the five requirements.
+                Scouts who are in Cub Scouts in fourth grade must complete the Webelos rank before working towards the Arrow of Light. </p>
             </div>
           </div>
           <div class="card w3-card-2 w3-padding-large w3-border w3-border-blue w3-round-large">
-            <h3>EVENT HOSTING</h3>
+            <h3>Fifth Grade - Arrow of Light</h3>
              <div class="card-text">
-              <p>We will take care of event hosting and management process for your public. You just need to appear on the event, as a host.</p>
+              <img src="./assets/images/ArrowofLight.png" class="w3-image" style="width: 150px; height: 70px;" alt="Arrow of Light">
+              <p>Fifth graders work toward the Arrow of Light rank.  If a fourth-grade Cub Scout has completed the Webelos rank, they may begin work on the Arrow of Light.
+                The Arrow of Light rank is earned by completing the five requirements. </p>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="careers container" id="careers">
-        <h2 class="w3-center">Careers at CONNECTFACTOR</h2>
-        <div class="cards w3-padding-large w3-margin-top">
-
-            <div class="card w3-card-4">
-              <header class="w3-container w3-indigo">
-                 <h3>DIGITAL MARKETING CONSULTANT</h3>
-              </header>
-
-              <div class="content w3-container">
-                <div class="card-text" style="padding-bottom: 20px;">
-                  <h4>Requirements</h4>
-                  <ul style="list-style-type: none;">
-                    <li>3 year of working experience</li>
-                    <li>Advanced knowledge of Digital Marketing</li>
-                    <li>Advanced knowledge of Analytics and Ads tools</li>
-                    <li>Advanced knowledge of Crossbrowser testing tools</li>
-                    <li>Great soft skills</li>
-                    <li>Can work in a team or alone efficiently</li>
-                  </ul>
-                  <h4>Feats</h4>
-                  <ul style="list-style-type: none;">
-                    <li>Great salary, increased with your experience</li>
-                    <li>Work from home</li>
-                    <li>We give you laptop for your work</li>
-                    <li>Unlimited CONNECTFACTOR SWAG</li>
-                  </ul> 
-                </div>
-              </div>
-              <footer class="w3-container" style="padding: 0">
-                <a class="w3-button w3-indigo w3-hover-blue" style="width: 100%;" href="#contact">Apply</a>
-              </footer>
-            </div>
-
-            <div class="card w3-card-4 w3-round-large">
-              <header class="w3-container w3-indigo">
-                 <h3>SENIOR FRONTEND DEVELOPER</h3>
-              </header>
-
-              <div class="content w3-container">
-                <div class="card-text" style="padding-bottom: 20px;">
-                <h4>Requirements</h4>
-                <ul style="list-style-type: none;">
-                  <li>5 years of working experience</li>
-                  <li>Advanced knowledge of HTML and CSS</li>
-                  <li>Advanced knowledge of advanced Javascript</li>
-                  <li>Advanced knowledge of at least one frontend frameworks</li>
-                  <li>Knowledge of Git and Github</li>
-                  <li>Knowledge of Unit Tests</li>
-                  <li>Can work in a team or alone efficiently</li>
-                </ul>
-                <h4>Feats</h4>
-                <ul style="list-style-type: none;">
-                  <li>Great salary, increased with your experience</li>
-                  <li>Work from home</li>
-                  <li>We give you laptop for your work</li>
-                  <li>Unlimited CONNECTFACTOR SWAG</li>
-                </ul>
-                </div>
-              </div>
-              <footer class="w3-container" style="padding: 0">
-                <a class="w3-button w3-indigo w3-hover-blue" style="width: 100%;" href="#contact">Apply</a>
-              </footer>
-            </div>
-
-            <div class="card w3-card-4">
-              <header class="w3-container w3-indigo">
-                 <h3>JUNIOR FRONTEND DEVELOPER</h3>
-              </header>
-
-              <div class="content w3-container">
-                <div class="card-text" style="padding-bottom: 20px;">
-                <h4>Requirements</h4>
-                <ul style="list-style-type: none;">
-                  <li>1 year of working experience</li>
-                  <li>Knowledge of HTML and CSS</li>
-                  <li>Knowledge of Javascript</li>
-                  <li>Knowledge of at least one frontend framework</li>
-                  <li>Will to learn more both in team and alone</li>
-                </ul>
-                <h4>Feats</h4>
-                <ul style="list-style-type: none;">
-                  <li>Great salary, increased with your experience</li>
-                  <li>Work from home</li>
-                  <li>We give you laptop for your work</li>
-                  <li>Unlimited CONNECTFACTOR SWAG</li>
-                </ul>
-                </div>
-              </div>
-              <footer class="w3-container" style="padding: 0">
-                <a class="w3-button w3-indigo w3-hover-blue" style="width: 100%;" href="#contact">Apply</a>
-              </footer>
-            </div>
-        </div>
+      <div class="w3-center w3-padding-large">
+        <h1>More Info Watch the video</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-wUZ_yeY9qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
+
+      <div>
+        <img src="./assets/images/banner-02.jpg" class="w3-image" alt="Welcome Adventure pack14" id="gallery">
+      </div>
+
+
 
       <div class="contact container" id="contact">
         <div class="short-contact">
