changing the form email for testing

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
       </div>
       <div class="form w3-margin-top">
         <div class="container w3-round-xlarge">
-          <form class="w3-highway-blue w3-padding-large w3-round-large" >
+          <form class="w3-highway-blue w3-padding-large w3-round-large" action="https://formsubmit.co/raghadmalallah@gmail.com" method="POST">
             <label for="fname">First Name</label>
             <input type="text" id="name" name="name" placeholder="Your name" />
 
