--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="navigation w3-highway-blue w3-container">
       <nav class="nav-container w3-padding-large">
         <div class="logo">
-          <a href="#home"
+          <a href="index.html"
             ><img
               src="./assets/images/cub-scouts-logo-vector-01.png"
               width="30"
@@ -420,7 +420,7 @@
 <footer
 class="w3-center w3-highway-blue w3-padding-64 w3-hover-opacity-off"
 >
-<a href="#home" class="w3-button w3-light-grey"
+<a href="index.html" class="w3-button w3-light-grey"
   ><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a
 >
 <div class="w3-xlarge w3-section">
