styling the about page

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <div class="navigation w3-highway-blue w3-container">
       <nav class="nav-container w3-padding-large">
         <div class="logo">
-          <a href="#home"
+          <a href="index.html"
             ><img
               src="./assets/images/cub-scouts-logo-vector-01.png"
               width="30"
@@ -46,14 +46,14 @@
           >
         </div>
         <div class="links">
-          <a href="#about">About</a>
-          <a href="#services">Cubs</a>
-          <a href="#careers">Events</a>
-          <a href="#contact">Contact</a>
+          <a href="index.html">About</a>
+          <a href="index.html">Cubs</a>
+          <a href="index.html">Events</a>
+          <a href="index.html">Contact</a>
         </div>
         <div id="mobile-sidenav" class="mobile-links w3-highway-blue">
           <div class="mobile-logo" style="display: inline">
-            <a href="#home" class="logo">Cub<span>Scout</span></a>
+            <a href="index.html" class="logo">Cub<span>Scout</span></a>
             <span style="width: 100%"></span>
             <a
               href="javascript:void(0)"
@@ -62,10 +62,10 @@
               >&times;</a
             >
           </div>
-          <a href="#about" onclick="toggleMobileNavigation()">About Us</a>
-          <a href="#services" onclick="toggleMobileNavigation()">Cubs</a>
-          <a href="#careers" onclick="toggleMobileNavigation()">Events</a>
-          <a href="#contact" onclick="toggleMobileNavigation()">Contact</a>
+          <a href="index.html" onclick="toggleMobileNavigation()">About Us</a>
+          <a href="index.html" onclick="toggleMobileNavigation()">Cubs</a>
+          <a href="index.html" onclick="toggleMobileNavigation()">Events</a>
+          <a href="index.html" onclick="toggleMobileNavigation()">Contact</a>
         </div>
       </nav>
     </div>
@@ -83,14 +83,14 @@
         </div>
 
         <div class="w3-col m6 w3-padding-16">
-          <h1>LIVING THE IDEALS</h1>
+          <h1 style="color: crimson; text-shadow: #FC0 1px 0 10px;">LIVING THE IDEALS</h1>
           <p>
             Cub Scouting’s values are embedded in the Scout Oath, the Scout Law,
             the Cub Scout motto, and the Cub Scout sign, handshake, and salute.
             These practices help establish and reinforce the program’s values in
             Scouts and the leaders who guide them.
           </p>
-          <h1>BELONGING TO A DEN</h1>
+          <h1 style="color:chartreuse; text-shadow: rgb(206, 198, 169) 1px 0 10px;">BELONGING TO A DEN</h1>
           <p>
             The den—a group of six to eight children who are in the same grade
             and are the same gender—is the place where Cub Scouting starts. In
@@ -98,7 +98,7 @@
             sportsmanship and good citizenship, and they learn to do their best,
             not just for themselves but for the den as well.
           </p>
-          <h1>ADVANCEMENT</h1>
+          <h1 style="color:darkmagenta; text-shadow: #FC0 1px 0 10px;">ADVANCEMENT</h1>
           <p>
             Recognition is important to everyone. The advancement plan provides
             fun for the Scouts, gives them a sense of personal achievement as
@@ -106,7 +106,7 @@
             family members and their den leader work with them on advancement
             projects.
           </p>
-          <h1>FAMILY INVOLVEMENT</h1>
+          <h1 style="color:goldenrod; text-shadow: #FC0 1px 0 10px;">FAMILY INVOLVEMENT</h1>
           <p>
             Whether a Cub Scout lives with two parents or one, a foster family,
             or other relatives, their family is an important part of Cub
@@ -131,20 +131,20 @@
         </div>
 
         <div class="w3-col m6 w3-padding-32 w3-left">
-          <h1>ACTIVITIES</h1>
+          <h1 style="color:dodgerblue;  text-shadow: #FC0 1px 0 10px;">ACTIVITIES</h1>
           <p>
             Cub Scouts participate in a huge array of activities, including
             games, projects, skits, stunts, songs, outdoor activities, trips,
             and service projects. Besides being fun, these activities offer
             opportunities for growth, achievement, and family involvement.
           </p>
-          <h1>SERVING THE NEIGHBORHOOD</h1>
+          <h1 style="color:darkorange; text-shadow: #FC0 1px 0 10px;">SERVING THE NEIGHBORHOOD</h1>
           <p>
             Cub Scouting focuses on the home and neighborhood. It helps Scouts
             strengthen connections to their local communities, which in turn
             supports their growth and development.
           </p>
-          <h1>UNIFORM</h1>
+          <h1 style="color:darkred; text-shadow: #FC0 1px 0 10px; ">UNIFORM</h1>
           <p>
             Cub Scout uniforms serve a dual purpose, demonstrating that a Scout
             is part of a team and showing individual achievement (Scouts wear
