--- a/pack.html
+++ b/pack.html
@@ -31,7 +31,7 @@
     <div class="navigation w3-highway-blue w3-container">
       <nav class="nav-container w3-padding-large">
         <div class="logo">
-          <a href="#home"
+          <a href="index.html"
             ><img
               src="./assets/images/cub-scouts-logo-vector-01.png"
               width="30"
@@ -46,23 +46,23 @@
           >
         </div>
         <div class="links">
-            <a href="#about" >About</a>
-            <a href="#about" >Pack 140</a>
-            <a href="#services" >Cubs</a>
-            <a href="#careers" >Events</a>
-            <a href="#contact" >Contact</a>            
+            <a href="index.html" >About</a>
+            <a href="index.html" >Pack 140</a>
+            <a href="index.html" >Cubs</a>
+            <a href="index.html" >Events</a>
+            <a href="index.html" >Contact</a>            
           </div>
           <div id="mobile-sidenav" class="mobile-links w3-highway-blue">
             <div class="mobile-logo" style="display: inline;">
-              <a href="#home" class="logo">Cub<span>Scout</span></a>
+              <a href="index.html" class="logo">Cub<span>Scout</span></a>
               <span style="width: 100%;"></span>
               <a href="javascript:void(0)" class="closebtn" onclick="toggleMobileNavigation()">&times;</a>
             </div>
-            <a href="#about" onclick="toggleMobileNavigation()">About Us</a>
-            <a href="#about" onclick="toggleMobileNavigation()">Pack 140</a>
-            <a href="#services" onclick="toggleMobileNavigation()">Cubs</a>
-            <a href="#careers" onclick="toggleMobileNavigation()">Events</a>
-            <a href="#contact" onclick="toggleMobileNavigation()">Contact</a>
+            <a href="index.html" onclick="toggleMobileNavigation()">About Us</a>
+            <a href="index.html" onclick="toggleMobileNavigation()">Pack 140</a>
+            <a href="index.html" onclick="toggleMobileNavigation()">Cubs</a>
+            <a href="index.html" onclick="toggleMobileNavigation()">Events</a>
+            <a href="index.html" onclick="toggleMobileNavigation()">Contact</a>
           </div>
         </nav>
       </div>
