adding aninmation to the contact banner

--- a/index.html
+++ b/index.html
@@ -628,7 +628,23 @@
       />
     </div>
 
-    <div class="w3-panel w3-highway-blue numbers"></div>
+    <div class="w3-panel w3-highway-blue numbers">
+      <div class="divanim" id="div3">
+              <img
+              src="./assets/images/cub-scouts-logo-vector-01.png"
+              width="30"
+              height="30"
+              alt=""
+            />Cub<span>Scout</span>
+      
+              <img
+              src="./assets/images/cubslogo-06.jpg"
+              width="150"
+              height="30"
+              alt=""
+            />Pack<span>140</span>
+      </div>
+    </div>
 
     <div class="contact container" id="contact">
       <div class="short-contact">
