--- a/pack.html
+++ b/pack.html
@@ -72,13 +72,13 @@
     <div class="banner">
       <img src="./assets/images/bannerforpck140-05.jpg" class="w3-image" alt="...">
     </div>
-    <div class="about container w3-padding-large" id="about">
-      <div >
-        <h2>Pack 140</h2>
-        <p>All our functions are designed to be family focused and inclusive--all siblings are welcome to join the Scouts at our events and have fun! We have over 20 volunteer adult Leaders in our Pack engaged to deliver these programs, and trained on how best to do so.
+    <div class="container w3-center w3-padding-large">
+      
+        <h1 style="color:dodgerblue;  text-shadow: #FC0 1px 0 10px;">Pack 140</h1>
+        <p style="font-weight: bold;">All our functions are designed to be family focused and inclusive--all siblings are welcome to join the Scouts at our events and have fun! We have over 20 volunteer adult Leaders in our Pack engaged to deliver these programs, and trained on how best to do so.
           The large number of active Leaders we have not only ensures we have adequate supervision for our Scouts, but also helps prevent our volunteers from getting burnt out and to ensure a consistency to our programs over the time your Scout will be participating.
           It is another great aspect of having such a large number of families involved in our program!</p>
-          <p>Pack 140 holds Pack meetings (with all the grade levels) typically on the first Sunday of every month at St. Mary's Catholic Church in Buffalo Grove, with Den Meetings (smaller groups of boys and girls in the same grade) held twice each month on a weeknight that fits best with the availability of the families that make up that Den.
+          <p style="font-weight: bold;">Pack 140 holds Pack meetings (with all the grade levels) typically on the first Sunday of every month at St. Mary's Catholic Church in Buffalo Grove, with Den Meetings (smaller groups of boys and girls in the same grade) held twice each month on a weeknight that fits best with the availability of the families that make up that Den.
             Cub Scouts is available for children in Kindergarten through the fifth grade to join, and children with special needs can participate at whatever level the parents feel is best for them.
             We are now welcoming girls into our program as well.
             Families can join us for events before then with no commitment or cost! Contact us for more info.</p>
